--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,47 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.form-container{
+    display: block;
+    max-width: 300px;
+    margin: auto;
+    background: rgba(black, 0.8);
+    padding: 48px;
+    border-radius: 16px;
+}
+.form-container mat-form-field{
+    width: 100%;
+}
+.center{
+    display: flex;
+    justify-content: center;
+}
+.margin-top{
+    margin-top: 16px;
+}
+.text-cent{
+    text-align: center;
+}
+
+
+.mat-button.mat-primary .mat-button-focus-overlay {
+    background-color: transparent;
+}
+.mat-toolbar{
+    background-color: rgba(black, 0.8) !important;
+}
+  .version-info {
+    font-size: 8pt;
+    float: right;
+  }
+  .mat-form-field-label {
+    color: white !important;
+  }
+  .mat-form-field-underline {
+    background-color: white !important;
+  }
+  .mat-form-field-infix{
+      color: white;
+  }
+  
