Created the structure for the game details page

--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,1 +1,20 @@
-<p style="color:aqua">details works!</p>
+
+
+<div class="wrapper">
+    <div class="image" ><img class="banner" src="{{movie?.image}}" ></div>
+    <div class="table"> 
+      <h1 class="title" >{{movie?.title}}</h1>
+      <table class="DetailsTable">
+        <tr>
+          <th>Description</th>
+          <th>Release</th>
+          <th>Rating</th>
+        </tr>
+        <tr>
+          <td class="description" >{{movie?.description}}</td>
+          <td class="bigFont" >{{movie?.release}}</td>
+          <td class="bigFont">{{movie?.rating}}</td>
+        </tr>
+       
+      </table></div>
+  </div>
