Styled the login and signup components

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -17,10 +17,10 @@
             </mat-error>
         </mat-form-field>
         <div class="center margin-top">
-            <button mat-raised-button color="primary" type="submit">Login</button>
+            <button mat-raised-button class="button-login" color="primary" type="submit">Login</button>
         </div>
-        <div class="center margin-top">
-            <span>New to our platform? <a class="sign-up-link"  routerLink="/sign-up">Sign Up!</a> </span>
+        <div class="center margin-top ">
+            <span class="sign-up" >New to our platform? <a class="sign-up-link"  routerLink="/sign-up">Sign Up!</a> </span>
         </div>
        
     </form>
