--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,12 +1,27 @@
 .sign-up-link{
-    font-size: 20px;
+    font-size: 22px;
     margin-left: 10px;
     color: white;
+    font-weight: 600;
 }
 
 .title{
     color: white;
+    font-size: 35px;
+    font-weight: 600;
 }
 span{
     color: white;
+}
+
+.form-container{
+    margin-top: 100px;
+}
+.sign-up{
+    font-size: 20px;
+}
+.button-login{
+    font-size: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
