--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -38,7 +38,7 @@
                 Passwords should match
         </mat-error>
         <div class="center margin-top">
-            <button mat-raised-button color="primary" type="submit">Sign Up</button>
+            <button mat-raised-button class="button-submit" color="primary" type="submit">Sign Up</button>
         </div>
        
     </form>
