--- a/src/app/components/sign-up/sign-up.component.scss
+++ b/src/app/components/sign-up/sign-up.component.scss
@@ -1,3 +1,13 @@
 h1{
     color: white;
+    font-size: 30px;
+    font-weight: 600;
+}
+.form-container{
+    margin-top: 100px;
+}
+.button-submit{
+    font-size: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
