--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,5 +6,13 @@ mat-toolbar{
 }
 
 body{
-    background-image: url("https://static.playtech.ro/wp-content/uploads/2020/02/Netflix-Parasite.jpg");
+    margin:0px;
+    height:100%;
+    width:100%;
+    background:url('https://static.playtech.ro/wp-content/uploads/2020/02/Netflix-Parasite.jpg') no-repeat center center fixed ; 
+
+    -webkit-background-size:cover;
+    -o-background-size:cover;
+    -moz-background-size:cover;
+    background-size:cover;
 }
